--- a/6-mobile-navbar/index.html
+++ b/6-mobile-navbar/index.html
@@ -80,10 +80,10 @@
         display: none;
       }
 
-      *:focus {
+      /* *:focus {
         outline: none;
         box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
-      }
+      } */
 
       .desktop-btn:focus {
         outline: none;
