--- a/1-contact-us-form/index.html
+++ b/1-contact-us-form/index.html
@@ -13,20 +13,20 @@
 
       html {
         font-size: 62.5%;
-        /* overflow: hidden; */
-        height: 100%;
+        height: 100vh;
         background-image: radial-gradient(
             circle at 5% 30%,
             rgba(247, 229, 244, 1) 5%,
             transparent 15%
           ),
           radial-gradient(circle at 30% 10%, #d0c8df 0%, transparent 25%);
+        background-size: cover; /* Ensures the background covers the entire viewport */
+        background-position: center; /* Centers the background image */
+        background-repeat: no-repeat; /* Prevents the background from repeating */
       }
 
       body {
         font-family: "Poppins", sans-serif;
-
-        height: 98%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -69,7 +69,7 @@
       .form-container {
         display: flex;
         flex-direction: column;
-        gap: 1.2rem;
+        gap: 1rem;
         font-weight: 500;
       }
 
